site/src/content/docs/zh-cn/v0.2/quick-start.mdx
---
slug: zh-cn/v0.2/quick-start
title: 快速开始
description: 创建 Marivo project，加载 semantic catalog，并运行第一次指标中心分析。
---

用 `marivo init` 初始化 project（参见[安装](/zh-cn/v0.2/installation/#初始化一个-project)），
然后编写你的 declarations。一个最小 Marivo project 包含 manifest、datasource declarations
和 semantic declarations：

```text
your-project/
  marivo.toml
  models/
    datasources/
      warehouse.py
    semantic/
      sales/
        _domain.py
```

先声明 datasource：

```python
import marivo.datasource as md
import marivo.semantic as ms

md.duckdb(
    name="warehouse",
    path="warehouse.duckdb",
    ai_context=ms.ai_context(
        business_definition="Local DuckDB warehouse for sales analysis.",
        guardrails=["Use only for development or approved local analysis."],
    ),
)
```

再声明 semantic objects：

```python
import marivo.datasource as md
import marivo.semantic as ms

ms.domain(
    name="sales",
    ai_context=ms.ai_context(
        business_definition="Sales order analysis domain.",
        guardrails=["Revenue metrics should only use completed orders."],
    ),
)

orders = ms.entity(
    name="orders",
    datasource=md.ref("datasource.warehouse"),
    source=ms.table("orders"),
    primary_key=["order_id"],
    ai_context=ms.ai_context(
        business_definition="One row per sales order.",
        guardrails=["Exclude cancelled test data in metric definitions."],
    ),
)


region = ms.dimension_column(
    name="region",
    entity=orders,
    column="region",
    ai_context=ms.ai_context(
        business_definition="Sales region assigned to the order.",
        guardrails=["Do not treat missing region as a real region."],
    ),
)


order_date = ms.time_dimension_column(
    name="order_date",
    entity=orders,
    column="order_date",
    granularity="day",
    is_default=True,
    ai_context=ms.ai_context(
        business_definition="Calendar date when the order was placed.",
        guardrails=["Use this as the default time axis for order metrics."],
    ),
)


amount = ms.measure_column(
    name="amount",
    entity=orders,
    column="amount",
    additivity="additive",
    unit="CNY",
    ai_context=ms.ai_context(
        business_definition="Completed order amount at row level.",
        guardrails=["Use only where order amount is already net of cancellations."],
    ),
)


revenue = ms.aggregate(
    name="revenue",
    measure=amount,
    agg="sum",
    ai_context=ms.ai_context(
        business_definition="Total completed order amount.",
        guardrails=["Use only where order amount is already net of cancellations."],
    ),
)
```

你不必手写这些对象。`marivo init` 已经把 **`marivo-semantic` skill** 安装到 `.claude/skills/`
和 `.codex/skills/`，因此在 project 中运行的编码 agent（Claude Code 或 Codex）可以和你一起构建
semantic layer。把它指向你的表并提出请求：

> Use the marivo-semantic skill to model the `orders` table in the `sales` domain.

该 skill 会引导 agent 走一个有纪律的 authoring 循环，每次只处理一个对象：

- **遵循 ladder** —— domain → entity → dimension → time dimension → measure →
  metric → relationship —— 让每个对象的依赖先于它存在。
- **先规划，再编写。** 对每个对象，agent 先调用匹配的 `ms.prepare_*` API，根据返回的
  brief 分支判断，再把 declaration 写入 `models/semantic/<domain>/_domain.py`。默认的
  metric 路径是先调用 `ms.prepare_measure(...)`，写入并验证 measure，再声明
  `ms.aggregate(...)`；`ms.prepare_metric(...)` 只用于 measure-backed workflow 需要
  metric-level context 的场景。
- **验证后再前进。** 每写完一个对象就运行 `ms.verify_object(ref)`，在它失败时不会继续。
- **closeout 时设闸。** 最后运行 `ms.readiness()`，在把 catalog 交给分析之前解决 blockers。

Agent 只会就那些无法从数据或 project 文档推断的决策征询你（例如某个金额是否已扣除退款）。它产出
的，正是上面展示的同一批 Python declarations —— 可以像其他代码一样在 git 中评审。

分析前先探索 catalog：

```python
import marivo.semantic as ms

catalog = ms.load()
catalog.list().show()

report = catalog.readiness()
if report.status == "blocked":
    report.show()
```

Catalog ready 后，开启 analysis session：

```python
import marivo.analysis as mv

session = mv.session.get_or_create(name="revenue-check", question="Why did Q4 drop?")
catalog = session.catalog
revenue = catalog.get("sales.revenue")
region = catalog.get("sales.orders.region")

current = session.observe(
    revenue,
    timescope={"start": "2026-10-01", "end": "2027-01-01"},
    grain="month",
    dimensions=[region],
)
baseline = session.observe(
    revenue,
    timescope={"start": "2025-10-01", "end": "2026-01-01"},
    grain="month",
    dimensions=[region],
)
delta = session.compare(current, baseline)
attribution = session.attribute(delta, axes=[region])
attribution.show()

delta.contract().affordances      # mechanical compatibility, not recommendations
delta.quality_summary             # cheap metadata projection
quality = session.assess_quality(delta)
quality.show()
```

如果自定义 Ibis 计算结果还要回到 Marivo typed metric flow，使用
`session.derive_metric_frame(...)`。Semantic refs 只用于 metric 与 axis 绑定，
query 输出列名仍是普通字符串。跨后续脚本时，用 `session.frame_summaries()` 和
`session.get_frame(ref)` 恢复已有 artifacts，不要重跑上游查询。用
`artifact.contract().affordances` 查看机械兼容性事实。

## 最佳实践

同样的 project 结构，可以从一次性脚本一路扩展到经过评审、可共享的分析 project。三个习惯决定
了差别。

### 把 semantic layer 当作共享的知识库来建设

Semantic layer 不只是触达表的管道 —— 它是 agent 在分析*之前*所读取的知识库。在每个对象上
投入 `ms.ai_context(...)`：

- `business_definition` —— 这个 metric 或 dimension 在业务上*意味着什么*。
- `guardrails` —— agent 必须遵守的规则：必需的过滤、排除项、范围限制。
- `synonyms` 与 `examples` —— 让 agent 把自然语言问题解析到正确的对象，而不是靠猜。

一个充分丰富的对象，无需人类介入就能回答 agent 的“我能用它吗，怎么用？”。Readiness 守住底线：
缺失 `business_definition` 会 block 分析，缺失 `guardrails` 会发出 warning。完整的 `ms.ai_context(...)`
契约参见 [Semantic Layer](/zh-cn/v0.2/concepts/semantic-layer/)。

### 用 git 管理 project

一个 Marivo project 就是纯文本：`marivo.toml` 加上 `models/` 下的 Python 文件。这让 semantic
layer 成为一个可评审、可共享的工件 —— 把它当作应用代码来对待。

- **对契约做版本控制。** 提交 `marivo.toml` 和 `models/`。对 metric 定义或 guardrail 的每一次
  改动都会以 diff 的形式呈现。
- **像评审代码一样评审 semantic 改动。** 通过 pull request 合入定义改动，让 domain owner 在
  agents 使用之前批准一个 metric 的*含义*。
- **通过仓库共享。** 任何 clone 该 project 的人 —— 以及任何在其中运行的 agent —— 都得到同一份
  可信 catalog。
- **把状态与 secrets 排除在 git 之外。** 把 `.marivo/` 加入 `.gitignore`：它保存的是 project
  本地的 session 与 evidence 状态，不是契约。凭据以 `*_env` references 的形式编写，从环境（或
  缓存于 user-global 的 `~/.marivo/secrets.toml`）解析 —— 它们从不写入 project。

一个典型的 `.gitignore`：

```text
.marivo/
```

### 交接前先设闸

加载后运行 `ms.readiness()`，并在任何分析 session 之前解决 blockers。一个 project 可以在
readiness 仍为 blocked 时成功加载，因此绝不要把一个 blocked 的 catalog 交给 agent。参见
[Readiness](/zh-cn/v0.2/concepts/readiness/)。
